# Surfer

./: .codespellrc  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .typos.toml  CHANGELOG.md  Cargo.toml  README.md  about.hbs  about.toml  accept_snapshots.bash  book.toml  default_config.toml  default_theme.toml  surfer.sh  update_spade_test.bash  update_wasm_example.bash
.gitlab/merge_request_templates/: default.md
docs/: README.md  SUMMARY.md
docs/commands/: README.md
docs/configuration/: README.md
docs/configuration/themes/: README.md  builtin.md  parameters.md
docs/plugins/: README.md  decoders.md  installing_plugins.md  writing_plugins.md
examples/: counter.sucl  counter_no_wave_load.sucl  hexadecimal.py  script_running_script.sucl  surfer.pyi  theme_demo.ghw  vhdlfixed.ghw  vhdlsigned.fst  wasm_example_translator.wasm
libsurfer/: Cargo.toml  build.rs
libsurfer/src/: async_util.rs  batch_commands.rs  benchmark.rs  channels.rs  clock_highlighting.rs  command_parser.rs  command_prompt.rs  config.rs  cxxrtl_container.rs  data_container.rs  dialog.rs  displayed_item.rs  displayed_item_tree.rs  drawing_canvas.rs  file_dialog.rs  file_watcher.rs  fzcmd.rs  graphics.rs  help.rs  hierarchy.rs  keys.rs  lib.rs  logs.rs  marker.rs  menus.rs  message.rs  mousegestures.rs  overview.rs  state.rs  state_file_io.rs  state_util.rs  statusbar.rs  system_state.rs  time.rs  toolbar.rs  transaction_container.rs  util.rs  variable_direction.rs  variable_filter.rs  variable_index.rs  (+10 more)
libsurfer/src/cxxrtl/: command.rs  cs_message.rs  io_worker.rs  mod.rs  query_container.rs  sc_message.rs  timestamp.rs
libsurfer/src/remote/: client.rs  mod.rs
libsurfer/src/tests/: mod.rs  remote.rs  snapshot.rs  wcp.rs  wcp_tcp.rs
libsurfer/src/translation/: basic_translators.rs  clock.rs  enum_translator.rs  fixed_point.rs  instruction_translators.rs  mod.rs  numeric_translators.rs  python_translators.rs  wasm_translator.rs
libsurfer/src/wcp/: mod.rs  proto.rs  wcp_handler.rs  wcp_server.rs
misc/: release_checklist.md
surfer/: Cargo.toml  Trunk.toml  index.html
surfer-translation-types/: Cargo.toml
surfer-translation-types/src/: field_ref.rs  lib.rs  plugin_types.rs  python.rs  result.rs  scope_ref.rs  translator.rs  variable_index.rs  variable_ref.rs
surfer/assets/: Surfer.desktop  integration.js
surfer/src/: main.rs
surver/: Cargo.toml
surver/src/: lib.rs  main.rs  server.rs
themes/: dark+.toml  dark-high-contrast.toml  ibm.toml  light+.toml  light-high-contrast.toml  okabe-ito.toml  solarized.toml
translator-docs/: Cargo.toml
translator-docs/src/: lib.rs
wasm_example_translator/: Cargo.toml
wasm_example_translator/src/: lib.rs
