[package]
name = "surfer"
version.workspace = true
license.workspace = true
categories.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
clap.workspace = true
camino.workspace = true
eyre.workspace = true
eframe.workspace = true
egui.workspace = true
libsurfer = { path = "../libsurfer", default-features = false }
log.workspace = true
tokio.workspace = true
ron.workspace = true
simple-eyre.workspace = true
surver.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures.workspace = true


[features]
default = ["performance_plot"]
accesskit = ["libsurfer/accesskit"]
f128 = ["libsurfer/f128"]
performance_plot = ["libsurfer/performance_plot"]
python = ["libsurfer/python"]
