[package]
name = "surver"
version.workspace = true
edition.workspace = true
license.workspace = true
categories.workspace = true
rust-version = "1.74.1"
description = "Server for the Surfer waveform viewer"
repository.workspace = true

[dependencies]
bytesize.workspace = true
clap.workspace = true
eyre.workspace = true
bincode.workspace = true
fern.workspace = true
lazy_static.workspace = true
log.workspace = true
lz4_flex.workspace = true
serde.workspace = true
serde_json.workspace = true
simple-eyre.workspace = true
tokio.workspace = true
web-time.workspace = true
wellen.workspace = true
leb128.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fastrand = "2.3.0"
http-body-util = "0.1.2"
hyper = { version = "1.4", features = ["http1", "server"] }
hyper-util = { version = "0.1.6", features = ["tokio"] }
whoami = "1.5.1"
