[package]
name = "wasm_example_translator"
version.workspace = true
license.workspace = true
categories.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.4.1"
surfer-translation-types.path = "../surfer-translation-types"
